# MCPixel

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  THIRD_PARTY_NOTICES  docker-compose.yml  pyproject.toml
docs/design/: README.md  v3.md  v4-angles.md  v4-animation.md  v4-image-edit.md  v4.md  v5-animation.md
docs/superpowers/specs/: 2026-07-14-mcpixel-brand-mark-design.md
mcpixel/: config.py  main.py  mcp_server.py  projects.py  settings_store.py
mcpixel/api/: routes.py
mcpixel/jobs/: models.py  pool.py  runner.py  store.py
mcpixel/pipeline/: alpha.py  cutout.py  directions.py  rembg_worker.py  snapper.py
mcpixel/prompts/: __init__.py  defaults.py  resolve.py
mcpixel/providers/: base.py  openai_images.py  openai_text.py  refine_prompts.py
mcpixel/static/: app.js  index.html  styles.css
mcpixel/static/css/: base.css  components.css  tokens.css
mcpixel/static/css/themes/: forest.css  ink.css
mcpixel/static/js/: api.js  batch.js  dialogs.js  directions-view.js  editor.js  generate.js  job-view.js  library.js  preview-chrome.js  projects.js  queue.js  settings.js  state.js  theme.js  tooltips.js
