[project]
name = "mcpixel"
version = "0.1.0"
description = "MCPixel — local pixel art suite (generate → cutout → snap → tweak) with MCP"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.6.0",
    "openai>=1.55.0",
    "httpx>=0.27.0",
    "pillow>=10.4.0",
    "rembg>=2.0.50",
    "onnxruntime>=1.19.0",
    "mcp>=1.0.0",
]

[project.scripts]
mcpixel = "mcpixel.main:run"
mcpixel-mcp = "mcpixel.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcpixel"]

[tool.uv]
override-dependencies = [
    "numba>=0.60.0",
    "llvmlite>=0.43.0",
]
